# qsnake

./: CMakeLists.txt  README.md
data/shaders/: PassThroughShader.json  SnakeShader.json
data/shaders/programs/PassThroughShader/: PassThroughShader.frag  PassThroughShader.vert
data/shaders/programs/SnakeShader/: SnakeShader.frag  SnakeShader.vert
lib/includes/: cxxopts.h  stb_image.h
lib/includes/glm/detail/: type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
lib/includes/imgui/: imgui_stdlib.cpp  imgui_stdlib.h
source/: Camera.cpp  Camera.h  DrawCommand.h  Engine.cpp  Engine.h  EngineSettings.cpp  EngineSettings.h  GameObjectManager.cpp  GameObjectManager.h  GraphicsManager.cpp  GraphicsManager.h  IDrawCommand.h  IGameModeController.h  ILevel.h  IObject.h  Level.cpp  Level.h  Object.cpp  Object.h  PropertyInspector.cpp  PropertyInspector.h  Random.cpp  Random.h  Shader.cpp  Shader.h  StringLibrary.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp  pch.h  qGL.cpp  qGL.h
source/game/: Fruit.cpp  Fruit.h  Grid.cpp  Grid.h  SnakeDrawCommand.cpp  SnakeDrawCommand.h  SnakeGameMode.cpp  SnakeGameMode.h  SnakeLevel.cpp  SnakeLevel.h  SnakeObject.cpp  SnakeObject.h  SnakeTail.cpp  SnakeTail.h
